...
                  icon: Icons.notifications_outlined,
                  onTap: () =>
                      context.pushRoute(const AlertCardsDemoScreenRoute()),
                ),
                _buildQuickActionTile(
                  context,
                  title: 'Dialogs',
                  icon: Icons.notifications_outlined,
                  onTap: () =>
                      context.pushRoute(const SampleDialogScreenRoute()),
                ),
              ]),
            ),
...
